<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/action_bar"
        layout="@layout/view_action_bar"/>

    <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
        android:id="@+id/tilNombre"
        android:layout_marginTop="@dimen/margin_top_toolbar"
    android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:textSize="@dimen/textsize_normal"
            />


    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_top_edittext"
        android:id="@+id/tilMail"
        android:layout_below="@id/tilNombre"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:textSize="@dimen/textsize_normal"

            />


    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_top_edittext"
        android:id="@+id/tilMensaje"
        android:layout_below="@id/tilMail"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mensaje"
            android:textSize="@dimen/textsize_normal"
            />


    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize_normal"
        android:text="@string/enviar"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnEnviar"
        android:background="@color/colorPrimary"
        />

</RelativeLayout>